--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -20,14 +20,18 @@
 
 
 ### General project setup
-general:
+#general:
 
 ### Step-specific configuration
 steps:
-  mavenExecute:
-    dockerImage: devxci/mbtci:1.0.14
-
-
+   mtaBuild:
+    buildTarget: 'CF'
+   cloudFoundryDeploy:
+    cloudFoundry:
+      credentialsId: 'Sbasu'
+      apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'
+      org: '352294e9trial'
+      space: 'dev'
 ### Stage-specific configuration
 stages:
 
