--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -27,6 +27,8 @@ steps:
    mtaBuild:
     buildTarget: 'CF'
    cloudFoundryDeploy:
+    dockerImage: 'ppiper/cf-cli'
+    smokeTestStatusCode: '200'
     cloudFoundry:
       credentialsId: 'Sbasu'
       apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'
