--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -20,20 +20,15 @@
 
 
 ### General project setup
-#general:
+general:
+  productiveBranch: 'master'
 
 ### Step-specific configuration
 steps:
-   mtaBuild:
-    buildTarget: 'CF'
-   cloudFoundryDeploy:
-    dockerImage: 'ppiper/cf-cli'
-    smokeTestStatusCode: '200'
-    cloudFoundry:
-      credentialsId: 'Sbasu'
-      apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'
-      org: '352294e9trial'
-      space: 'dev'
+  mavenExecute:
+    dockerImage: devxci/mbtci:1.0.14
+
+
 ### Stage-specific configuration
 stages:
 
