--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -44,14 +44,16 @@ steps:
 
 stages:
 
+
 + 'Pull-Request Voting':
-+   customVotingBranch: 'MY-PREFIX-*'
++   customVotingBranch: 'gpp'
 
 + 'Build':
 +   mavenExecuteStaticCodeChecks: true
 +   npmExecuteLint: true
 + Confirm:
 +   manualConfirmation: false
+
 #  integrationTests:
 #    credentials:
 #      - alias: 'mySystemAlias'
