--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -28,7 +28,7 @@ steps:
  dockerImage: devxci/mbtci:1.0.14
 
  setupCommonPipelineEnvironment:
-    collectTelemetryData: false
+   # collectTelemetryData: false
 
     cloudFoundryDeploy:
     dockerImage: 'ppiper/cf-cli'
