--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -22,8 +22,8 @@ general:
   productiveBranch: 'master'
   legacyConfigSettings: 'com.sap.piper/pipeline/cloudSdkToGppConfigSettings.yml'
   inferBuildTool: true
-  #buildTool: 'mta'
-  buildTool: 'maven'
+  buildTool: 'npm'
+ 
 
 ### Step-specific configuration
 steps:
