--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,19 +1,3 @@
 general:
-  productiveBranch: gpp
-  legacyConfigSettings: 'com.sap.piper/pipeline/cloudSdkToGppConfigSettings.yml'
-  inferBuildTool: true
-  gitSshKeyCredentialsId: Sbasu
-
-stages:
-+ 'Pull-Request Voting':
-+   customVotingBranch: 'MY-PREFIX-*'
-
-
-+ Confirm:
-+   manualConfirmation: false
-
-
-steps:
-
-fortifyExecuteScan:
-  +   buildTool: 'mta'
+  buildTool: 'npm'
+  gitSshKeyCredentialsId: 'Sbasu'
