--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,8 +1,13 @@
 general:
+  export ON_K8S: true
   buildTool: 'mta'
   gitSshKeyCredentialsId: 'Sbasu'
   productiveBranch: 'master'
   verbose: true
+  jenkinsKubernetes/inheritFrom: true
+  jenkinsKubernetes/jnlpAgent: true
+  jenkinsKubernetes/namespace: true
+
   script: this
 
   step:
