--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,18 +1,25 @@
 general:
-  export ON_K8S: true
-  buildTool: 'mta'
-  gitSshKeyCredentialsId: 'Sbasu'
-  productiveBranch: 'master'
+ # export ON_K8S: true
+  #buildTool: 'mta'
+  #gitSshKeyCredentialsId: 'Sbasu'
+  #productiveBranch: 'master'
   verbose: true
-  jenkinsKubernetes/inheritFrom: true
-  jenkinsKubernetes/jnlpAgent: true
-  jenkinsKubernetes/namespace: true
+#  jenkinsKubernetes/inheritFrom: true
+ # jenkinsKubernetes/jnlpAgent: true
+  #jenkinsKubernetes/namespace: true
+  #script: this
 
-  script: this
-
-  step:
+  #step:
     
-      buildExecute:
-        buildTool: 'mta'
-        npmInstall: true
-   
+   #   buildExecute:
+    #    buildTool: 'mta'
+     #   npmInstall: true
+steps:
+   mtaBuild:
+    buildTarget: 'CF'
+   cloudFoundryDeploy:
+    cloudFoundry:
+      credentialsId: 'Sbasu'
+      apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'
+      org: '352294e9trial'
+      space: 'dev'
